# HDScan

./: .gitignore  README.md  browse.bat  pyproject.toml  scan.bat
file_archive/: __main__.py  app_paths.py  categorize.py  cli.py  humanize.py  logging_config.py
file_archive/backup/: manager.py
file_archive/db/: connection.py  schema.py
file_archive/export/: excel.py
file_archive/scanner/: engine.py  hasher.py  volume.py
file_archive/search/: query.py
file_archive/webui/: reveal.py  server.py  tree.py
file_archive/webui/static/: app.js  index.html  style.css
tests/: test_backup.py  test_categorize.py  test_db.py  test_export.py  test_hasher.py  test_reveal.py  test_scanner.py  test_search.py  test_webui_tree.py
